@@ -6,12 +6,18 @@ import java.util.stream.Collectors;
 /**
  * Fluent Builder design pattern.
  * Create queries for Vendia's API using an SQL-like syntax.
+ * 
+ * One consideration: Vendia does not support having the _id field in a list
+ * query, so be sure to use withId and limitOne when trying to get a single
+ * entity.
  */
 public class VendiaQueryBuilder {
     private final List<VendiaField> fields = new ArrayList<>();
     private final List<VendiaFilter> filters = new ArrayList<>();
     private final List<VendiaSort> sorts = new ArrayList<>();
     private VendiaType type = null;
+    private boolean single = false;
+    private String id = null;
     
     /**
      * Removes any currently selected fields, then selects the given ones.
@@ -54,6 +60,17 @@ public class VendiaQueryBuilder {
     }
 
     /**
+     * Filters to only include the entity with the given ID
+     * 
+     * @param id an entity's ID in Vendia 
+     * @return this, for chaining purposes
+     */
+    public VendiaQueryBuilder withId(String id){
+        this.id = id;
+        return this;
+    }
+
+    /**
      * Discards any previous sorts, then sets it to the given ones.
      * 
      * @param sorts the criteria to sort on
@@ -82,6 +99,17 @@ public class VendiaQueryBuilder {
     }
 
     /**
+     * Use this to select only a single matching entity, such as when getting an
+     * entity by ID or some other unique field.
+     * 
+     * @return this, for chaining purposes
+     */
+    public VendiaQueryBuilder limitOne(){
+        single = true;
+        return this;
+    }
+
+    /**
      * @return the fields part of a query
      */
     public String getFieldsString(){
@@ -98,7 +126,7 @@ public class VendiaQueryBuilder {
         if(type == null){
             throw new UnsupportedOperationException("cannot get type string before from(type) has been called");
         }
-        return String.format("_%sItems", type.toString());
+        return type.toString();
     }
 
     public String getFilterString(){
@@ -127,12 +155,22 @@ public class VendiaQueryBuilder {
      * @return a query that can be sent to the VendiaClient
      */
     public String build(){
+        if(single){
+            return buildSingle();
+        }
+
         var criteria = getFilterString();
         if(isSorted()){
             criteria += "," + getSortString();
         }
         var t = getTypeString();
         var fs = getFieldsString();
-        return String.format("query{list%s(%s){%s %s}}", t, criteria, t, fs);
+        return String.format("query{list_%sItems(%s){_%sItems %s}}", t, criteria, t, fs);
+    }
+
+    private String buildSingle(){
+        var t = getTypeString();
+        var fs = getFieldsString();
+        return "query{get_%s(id: \"%s\")%s}".formatted(t, id, fs);
     }
 }
